@@ -31,20 +31,32 @@
 
 // ----------------------------------------------------------------------------
 
-void ssd1306_init(void);
+// These functions are used only internally by the library
 void ssd1306_xfer_start(void);
 void ssd1306_xfer_stop(void);
 void ssd1306_send_byte(uint8_t byte);
 void ssd1306_send_command(uint8_t command);
 void ssd1306_send_data_start(void);
 void ssd1306_send_data_stop(void);
+
+// ----------------------------------------------------------------------------
+
+#define ssd1306_char(c) ssd1306_char_font6x8(c)
+#define ssd1306_string(s) ssd1306_string_font6x8(s)
+#define ssd1306_numdec(n) ssd1306_numdec_font6x8(n)
+#define ssd1306_numdecp(n) ssd1306_numdecp_font6x8(n)
+
+// ----------------------------------------------------------------------------
+
+void ssd1306_init(void);
 void ssd1306_setpos(uint8_t x, uint8_t y);
+void ssd1306_fillp(uint8_t p1, uint8_t p2);
+void ssd1306_fill(uint8_t p);
 void ssd1306_fillscreen(uint8_t fill);
 void ssd1306_char_font6x8(char ch);
 void ssd1306_string_font6x8(char *s);
 void ssd1306_numdec_font6x8(uint16_t num);
 void ssd1306_numdecp_font6x8(uint16_t num);
-
 void ssd1306_draw_bmp(uint8_t x0, uint8_t y0, uint8_t x1, uint8_t y1, const uint8_t bitmap[]);
 
 // ----------------------------------------------------------------------------
